# PyPnC

./: .gitignore  CMakeLists.txt  pypnc.yml
config/towr_plus/: atlas_forward_walk.yaml
pnc/planner/locomotion/towr_plus/: CMakeLists.txt
pnc/planner/locomotion/towr_plus/src/: atlas_crbi_helper.c
pnc_ros/: CMakeLists.txt  package.xml  setup.cfg  setup.py
pnc_ros/launch/: display.launch.py  pnc.launch.py
pnc_ros/pnc_ros/: animate_trajectory.py  rviz_state_publisher.py
pnc_ros/resource/atlas/: atlas.urdf
pnc_ros/rviz/: pnc_config.rviz
pnc_ros/urdf/atlas/: atlas.urdf  atlas_rel_path.urdf  atlas_robot_toolbox.urdf
robot_model/envs/: example_env.urdf
scripts/: build.sh  build_pnc_ros.sh  build_towr_plus.sh  clean.sh  launch.sh
simulator/pybullet/: atlas_crbi_trainer.py  atlas_kinematics_main.py  towr_mpc_main.py
simulator/towr_plus/: atlas_forward_walk.cpp  atlas_four_step.cpp
util/: pybullet_util.py
